les dropdown menus s'ouvrent et se ferment

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <section class="filters__section">
             <div class="filters"></div>
-            <div class="dropdown__menus">
+            <div class="filters__menus">
                 <div class="ingredients__menu dropdown">
                     <header>
                         <form method="post" id="ingredient__searchform">
@@ -57,6 +57,7 @@
         <section class="recipes__gallery"></section>
     </main>
     <script src="data/recipes.js" type="module"></script>
+    <script src="script/dropdown.js"></script>
     <script src="factory/index.js"></script>
     <script src="script/index.js" type="module"></script>
 </body>
