ajout de quelques propriétés CSS pour les dropdown menus (list items :hover )

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
                 <div class="menu__wrapper">
                     <div class="ingredients__menu dropdown">
                         <header>
-                            <form method="post" id="ingredient__searchform">
-                                <input type="text" name="search" placeholder="Ingrédients">
+                            <form method="post" id="ingredient__searchform" autocomplete="off">
+                                <input type="text" name="search" placeholder="Ingrédients" autocomplete="false">
                             </form>
-                            <i class="fa-sharp fa-solid fa-angle-down"></i>
+                            <span>
+                                <i class="fa-sharp fa-solid fa-angle-down"></i>
+                            </span>
                         </header>
                         <div class="ingredients__menu__list dropdown__list"></div>
                     </div>
@@ -41,10 +43,12 @@
                 <div class="menu__wrapper">
                     <div class="appareils__menu dropdown">
                         <header>
-                            <form method="post" id="appareils__searchform">
-                                <input type="text" name="search" placeholder="Appareils">
+                            <form method="post" id="appareils__searchform" autocomplete="off">
+                                <input type="text" name="search" placeholder="Appareils" autocomplete="false">
                             </form>
-                            <i class="fa-sharp fa-solid fa-angle-down"></i>
+                            <span>
+                                <i class="fa-sharp fa-solid fa-angle-down"></i>
+                            </span>
                         </header>
                         <div class="appareils__menu__list dropdown__list"></div>
                     </div>
@@ -52,10 +56,12 @@
                 <div class="menu__wrapper">
                     <div class="ustensils__menu dropdown">
                         <header>
-                            <form method="post" id="ustensils__searchform">
-                                <input type="text" name="search" placeholder="Ustensiles">
+                            <form method="post" id="ustensils__searchform" autocomplete="off">
+                                <input type="text" name="search" placeholder="Ustensiles" autocomplete="false">
                             </form>
-                            <i class="fa-sharp fa-solid fa-angle-down"></i>
+                            <span>
+                                <i class="fa-sharp fa-solid fa-angle-down"></i>
+                            </span>
                         </header>
                         <div class="ustensils__menu__list  dropdown__list"></div>
                     </div>
