les menus ne se ferment plus quand on clique sur les tags, et ne renvoient plus de message d'erreur

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <section class="recipes__gallery"></section>
     </main>
     <script src="data/recipes.js" type="module"></script>
+    <script src="script/sort.js"></script>
     <script src="script/dropdown.js"></script>
     <script src="factory/index.js"></script>
     <script src="script/index.js" type="module"></script>
