--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <section class="recipes__gallery"></section>
     </main>
     <script src="data/recipes.js" type="module"></script>
-    <script src="script/sort.js"></script>
+    <script src="script/globals.js" type="module"></script>
+    <script src="script/sort.js" type="module"></script>
     <script src="script/dropdown.js"></script>
     <script src="factory/index.js"></script>
     <script src="script/index.js" type="module"></script>
