amélioration du fonctionnement des tags (lors de la recréation des éléments de la page, les tags déjà présents ont la classe hidden dans la liste du menu déroulant

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <script src="data/recipes.js" type="module"></script>
     <script src="script/globals.js" type="module"></script>
     <script src="script/sort.js" type="module"></script>
-    <script src="script/dropdown.js"></script>
+    <script src="script/dropdown.js" type="module"></script>
     <script src="factory/index.js"></script>
     <script src="script/index.js" type="module"></script>
 </body>
