Modules correctement faits, on le lie maintenant plus que index.js au HTML

--- a/index.html
+++ b/index.html
@@ -70,12 +70,6 @@
         </section>
         <section class="recipes__gallery"></section>
     </main>
-    <script src="data/recipes.js" type="module"></script>
-    <script src="script/globals.js" type="module"></script>
-    <script src="script/sort.js" type="module"></script>
-    <script src="script/dropdown.js" type="module"></script>
-    <script src="factory/index.js"></script>
-    <script src="script/index.js" type="module"></script>
+    <script src="script/pages/index.js" type="module"></script>
 </body>
-
 </html>
