ajout du message en cas de recherche sans résultats

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 </div>
             </div>
         </section>
+        <div class="no__results">
+            <p>Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », « poisson », etc.</p>
+        </div>
         <section class="recipes__gallery"></section>
     </main>
     <script src="script/pages/index.js" type="module"></script>
