plus d'accès au DOM pour la fonction search

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <!-- /Menus déroulant -->
             </div>
         </section>
-        <div class="no__results">
+        <div class="no__results hidden">
             <p>Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », « poisson », etc.</p>
         </div>
         <!-- Gallerie -->
