--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="menu__wrapper">
                     <div class="ingredients__menu dropdown">
                         <header>
-                            <form method="post" id="ingredient__searchform" autocomplete="off">
+                            <form method="post" id="ingredient__searchform">
                                 <input type="text" name="search" placeholder="Ingrédients">
                             </form>
                             <span>
@@ -51,7 +51,7 @@
                 <div class="menu__wrapper">
                     <div class="appareils__menu dropdown">
                         <header>
-                            <form method="post" id="appareils__searchform" autocomplete="off">
+                            <form method="post" id="appareils__searchform" >
                                 <input type="text" name="search" placeholder="Appareils">
                             </form>
                             <span>
@@ -65,7 +65,7 @@
                     <div class="ustensils__menu dropdown">
                         <header>
                             <form method="post" id="ustensils__searchform">
-                                <input type="text" name="search" placeholder="Ustensiles" autocomplete="false">
+                                <input type="text" name="search" placeholder="Ustensiles" >
                             </form>
                             <span>
                                 <i class="fa-sharp fa-solid fa-angle-down"></i>
