rectifications des bugs liés aux menus déroulant

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div class="menu__wrapper">
                     <div class="ingredients__menu dropdown">
                         <header>
-                            <form method="post" id="ingredient__searchform" autocomplete="off">
-                                <input type="text" name="search" placeholder="Ingrédients" autocomplete="false">
+                            <form method="post" id="ingredient__searchform">
+                                <input type="text" name="search" placeholder="Ingrédients">
                             </form>
                             <span>
                                 <i class="fa-sharp fa-solid fa-angle-down"></i>
@@ -51,8 +51,8 @@
                 <div class="menu__wrapper">
                     <div class="appareils__menu dropdown">
                         <header>
-                            <form method="post" id="appareils__searchform" autocomplete="off">
-                                <input type="text" name="search" placeholder="Appareils" autocomplete="false">
+                            <form method="post" id="appareils__searchform">
+                                <input type="text" name="search" placeholder="Appareils">
                             </form>
                             <span>
                                 <i class="fa-sharp fa-solid fa-angle-down"></i>
@@ -64,8 +64,8 @@
                 <div class="menu__wrapper">
                     <div class="ustensils__menu dropdown">
                         <header>
-                            <form method="post" id="ustensils__searchform" autocomplete="off">
-                                <input type="text" name="search" placeholder="Ustensiles" autocomplete="false">
+                            <form method="post" id="ustensils__searchform">
+                                <input type="text" name="search" placeholder="Ustensiles">
                             </form>
                             <span>
                                 <i class="fa-sharp fa-solid fa-angle-down"></i>
