--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Les petits plats</title>
 </head>
 <!-- BODY -->
+
 <body>
     <!-- Header -->
     <header class="header">
@@ -78,7 +79,8 @@
             </div>
         </section>
         <div class="no__results">
-            <p>Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », « poisson », etc.</p>
+            <p>Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », « poisson »,
+                etc.</p>
         </div>
         <!-- Gallerie -->
         <section class="recipes__gallery"></section>
@@ -87,4 +89,5 @@
     <!-- /Main -->
     <script src="script/pages/index.js" type="module"></script>
 </body>
+
 </html>
